--- a/src/components/pages/home/home.css
+++ b/src/components/pages/home/home.css
@@ -14,10 +14,11 @@
 }
 
 .home-row {
-  display: flex;
   z-index: 1;
   margin-left: 5px;
   margin-right: 5px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
 @media only screen and (max-width: 500px) {
